[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/actors/SlideshowHolder.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/popups/search.PNG" type="Texture" id=2]
[ext_resource path="res://resources/styles/Roboto-Medium.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.937255, 0.937255, 0.937255, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )

[node name="SlideshowHolder" type="Control"]
visible = false
margin_right = 811.0
margin_bottom = 525.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionalAnimatedTexture" type="TextureRect" parent="."]
visible = false
margin_left = 214.02
margin_top = 23.4814
margin_right = 734.02
margin_bottom = 274.481
rect_min_size = Vector2( 520, 251 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchbarTyping" type="Label" parent="OptionalAnimatedTexture"]
visible = false
margin_left = 102.323
margin_top = 116.448
margin_right = 426.323
margin_bottom = 135.448
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Search bar typing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionalAnimatedTexture"]
visible = false
margin_left = 157.627
margin_top = 14.9695
margin_right = 366.627
margin_bottom = 76.9695
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
text = "99999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="OptionalAnimatedTexture"]

[node name="Tween" type="Tween" parent="."]

[node name="Label2" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -161.351
margin_top = -77.1951
margin_right = -53.3511
margin_bottom = -41.1951
custom_styles/normal = SubResource( 3 )
text = "Left-click >"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_SlideshowHolder_gui_input"]
[connection signal="tween_completed" from="OptionalAnimatedTexture/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="OptionalAnimatedTexture/Tween" to="." method="_on_Tween_tween_step"]
